--- a/Fase2/client/src/app/components/ccuatro/ccuatro.component.html
+++ b/Fase2/client/src/app/components/ccuatro/ccuatro.component.html
@@ -1,1 +1,16 @@
-<p>ccuatro works!</p>
+<section class="text-center">
+    <h1 class="text-success" style="font-size: 40px; font-weight:bold"> INSTITUCIONES BANCARIAS </h1>
+    <table mdbTable border="1">
+        <thead class="black white-text">
+            <tr>
+                <th *ngFor="let head of headElements" scope="col-sm">{{head}} </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr mdbTableCol *ngFor="let row of Rows" class="grey black-text">
+                <td>{{row.institucion_bancaria}}</td>
+                <td>{{row.abreviacion}}</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
