--- a/Fase2/client/src/app/components/cuno/cuno.component.html
+++ b/Fase2/client/src/app/components/cuno/cuno.component.html
@@ -1,1 +1,39 @@
-<p>cuno works!</p>
+<section class="text-center">
+    <h1 class="text-success" style="font-size: 40px; font-weight:bold"> OPERACIONES POR CUENTAHABIENTE </h1>
+    <input mdbInput name="txtCui" [(ngModel)]="cui" type="text" id="cui"
+        placeholder="Ingrese cui">
+    <br>
+    <input mdbInput name="txtNombre" [(ngModel)]="nombre" type="text" id="nombre"
+        placeholder="Ingrese nombre">
+    <br>
+    <input mdbInput name="txtApellido" [(ngModel)]="apellido" type="text" id="apellido"
+        placeholder="Ingrese apellido">
+    <br>
+    <button (click)="Buscar()"  type="submit" mdbBtn color="secondary">Buscar</button>
+    <br>
+    <br>
+    <table mdbTable border="1">
+        <thead class="black white-text">
+            <tr>
+                <th *ngFor="let head of headElements" scope="col-sm">{{head}} </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr mdbTableCol *ngFor="let row of Rows" class="grey black-text">
+                <td>{{row.cui}}</td>
+                <td>{{row.nombre}}</td>
+                <td>{{row.apellido}}</td>
+                <td>{{row.banco}}</td>
+                <td>{{row.tipo_cuenta}}</td>
+                <td>{{row.fechahora}}</td>
+                <td>{{row.monto}}</td>
+                <td>{{row.tipo_operacion}}</td>
+                <td>{{row.cui_destino}}</td>
+                <td>{{row.nombre_destino}}</td>
+                <td>{{row.apellido_destino}}</td>
+                <td>{{row.banco_destino}}</td>
+                <td>{{row.tipo_cuenta_destino}}</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
