--- a/Fase2/client/src/app/components/navigation/navigation.component.html
+++ b/Fase2/client/src/app/components/navigation/navigation.component.html
@@ -22,6 +22,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/C5">C5</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/RegistroCuentahabiente">Cuentahabientes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/RegistroInstitucion">Instituciones</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Transaccion">Transacciones</a>
+                </li>
             </ul>
         </div>
     </div>
